# reuse-ir

./: .gitignore  CMakeLists.txt  README.md
Binaries/: CMakeLists.txt
Binaries/LeanOpt/: CMakeLists.txt  Main.cpp
Binaries/LeanPlugin/: CMakeLists.txt  Passes.cpp  Plugin.cpp
Lean/: CMakeLists.txt  README.md
Lean/include/Lean/: CMakeLists.txt  LeanAttributes.td  LeanDialect.td  LeanOps.h  LeanOps.td  LeanOpsAttributes.h  LeanOpsDialect.h  LeanOpsTypes.h  LeanTypes.td
Lean/include/Lean/Analysis/: TypeTagAnalysis.h  TypeTagLattice.h
Lean/include/Lean/IR/: CMakeLists.txt  LeanAttributes.td  LeanOps.h  LeanOps.td  LeanOpsAttributes.h  LeanOpsDialect.h  LeanTypes.td
Lean/include/Lean/Pass/: TestTypeTagAnalysis.h
Lean/src/: CMakeLists.txt  LeanOps.cpp  LeanOpsAttributes.cpp  LeanOpsDialect.cpp  LeanOpsTypes.cpp
Lean/src/Analysis/: CMakeLists.txt  TypeTagAnalysis.cpp
Lean/src/IR/: CMakeLists.txt  LeanOps.cpp  LeanOpsAttributes.cpp
LeanIR/: README.md
Refcnt/: CMakeLists.txt  README.md
Refcnt/include/Refcnt/: CMakeLists.txt  RefcntDialect.h  RefcntDialect.td  RefcntOps.h  RefcntOps.td  RefcntOpsDialect.h  RefcntOpsTypes.h  RefcntTypes.td
Refcnt/src/: CMakeLists.txt  RefcntDialect.cpp  RefcntOps.cpp  RefcntOpsDialect.cpp  RefcntOpsTypes.cpp
Tests/: CMakeLists.txt
Tests/UnitTests/: CMakeLists.txt  GTestLeanBasic.cpp
include/Lean/Analysis/: ReusabilityAnalysis.h  TypeTagAnalysis.h
include/Lean/IR/: CMakeLists.txt  LeanOps.h  LeanOps.td  LeanOpsDialect.h  LeanOpsTypes.h
include/Lean/Pass/: TestReusabilityAnalysis.h  TestTypeTagAnalysis.h
include/Refcnt/: CMakeLists.txt
include/Refcnt/Analysis/: ReuseAnalysis.h
include/Refcnt/IR/: RefcntOps.h  RefcntOps.td  RefcntOpsDialect.h  RefcntOpsTypes.h  RefcntTypes.td
include/Refcnt/Utilities/: ADT.h.in  CMakeLists.txt
include/reuse/: CMakeLists.txt  ReuseBase.h  ReuseBase.td  ReuseOps.h  ReuseOps.td  ReuseTypes.h  ReuseTypes.td
lib/: CMakeLists.txt
lib/Lean/: CMakeLists.txt
lib/Lean/Analysis/: CMakeLists.txt  ReusabilityAnalysis.cpp  TypeTagAnalysis.cpp
lib/Lean/IR/: LeanOps.cpp  LeanOpsDialect.cpp  LeanOpsTypes.cpp
lib/Lean/Pass/: CMakeLists.txt  TestReusabilityAnalysis.cpp  TestTypeTagAnalysis.cpp
lib/Refcnt/: CMakeLists.txt
lib/Refcnt/Analysis/: CMakeLists.txt  ReuseAnalysis.cpp
lib/Refcnt/IR/: RefcntOps.cpp  RefcntOpsDialect.cpp  RefcntOpsTypes.cpp
lib/Refcnt/Utilities/: CMakeLists.txt
src/: main.cpp
src/reuse/: CMakeLists.txt  ReuseBase.cpp  ReuseOps.cpp
test/misc/: filter-map.mlir  reverse-map.mlir
test/unit-tests/: CMakeLists.txt  gtest-lean.cpp
