find_package(absl REQUIRED GLOBAL)

if (NOT absl_FOUND)
    set(REFCNT_UTILITIES_ADT_HAS_ABSL 0)
else()
    set(REFCNT_UTILITIES_ADT_HAS_ABSL 1)
endif()

set_property(GLOBAL PROPERTY REFCNT_UTILITIES_ADT_HAS_ABSL ${REFCNT_UTILITIES_ADT_HAS_ABSL})
configure_file(ADT.h.in ${CMAKE_CURRENT_BINARY_DIR}/ADT.h)
